--- a/sass/components/_portfolio-cards.scss
+++ b/sass/components/_portfolio-cards.scss
@@ -3,14 +3,10 @@
   display: flex;
   flex-wrap: wrap;
 }
-.port-container:hover,
-.port-container :focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 .port-container {
   display: block;
 
+  // border: 1px solid #eeeeee;
   cursor: pointer;
   flex-basis: calc((100% / 3 - 30px) / 3);
 
@@ -27,17 +23,12 @@
   & :hover .card-text {
     transform: translateY(0%);
   }
-  &:focus .example-link,
-  &:hover .example-link {
+  &:focus,
+  &:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
-// .example-link:hover,
-// .example-link:focus {
-//   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//     1px 4px 6px rgba(0, 0, 0, 0.16);
-// }
 .port-card {
   position: relative;
   width: 368px;
@@ -69,7 +60,6 @@
 }
 .title-container {
   padding: 20px 24px 20px 24px;
-
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
